Fix horizontal overflow in RTL layout

--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -102,8 +102,7 @@
     @media only screen and (max-width: 768px) {
       display: initial;
       position: relative;
-      left: -99999px;
-      opacity: 0;
+      visibility: hidden;
 
       &:checked+label>i {
         color: $alt-bg-color;
